# liquipedia-scraper-service

./: .gitignore  Makefile  README.md
app/: liquipedia_client.py  m7_parser.py  main.py  s_tier.py
apps/scraper-service/: README.md  build_hero_tier_list.py  draft_phase5_report.json  evaluate_draft_phase5.py  hero_role_pool.json  hero_role_pool_overrides.json  hero_tier_list.json  knockout_stage_matches.json  pyproject.toml  swiss_stage_matches.json
apps/scraper-service/app/: draft_v2.py  draft_v2_engine.py  m7_parser.py  main.py
apps/tier-ui/: README.md  pyproject.toml
apps/tier-ui/app/: main.py
apps/tier-ui/app/static/: draft_master.js  styles.css
apps/tier-ui/app/templates/: index.html  layout.html
docs/: draft_engine_v2_spec.md  draft_phase5_report.md
