[project]
name = "liquipedia-scraper-service"
version = "0.2.0"
description = "Service for fetching Liquipedia Mobile Legends data via MediaWiki API"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "httpx>=0.26.0",
  "beautifulsoup4>=4.12.0",
  "cachetools>=5.3.0",
]

[tool.uvicorn]
factory = false
